# paper-research-tool

./: .gitignore  LICENSE  README.en.md  README.ko.md  README.md  README.zh-TW.md  config.example.yaml  paper_tool.py  paper_tool_pro.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
core/: __init__.py  ai_caller.py  ai_summarizer.py  ai_synthesizer.py  config.py  critical_analyzer.py  gap_detector.py  i18n.py  knowledge_base.py  narrative_builder.py  paper_reader.py  pdf_parser.py  relation_graph.py  web_ui.py
docs/: GETTING_STARTED.en.md  GETTING_STARTED.ko.md  GETTING_STARTED.md
prompts/: basic.yaml  prompt_manager.py
templates/: __init__.py  writing_templates.py
tests/: test_ai_summarizer.py  test_cli.py  test_config.py  test_i18n.py  test_knowledge_base.py  test_pdf_parser.py
