[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-research-tool"
version = "0.3.0"
description = "AI-powered academic paper research assistant with trilingual support (zh-TW/en/ko)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Judy AI Lab", email = "miranttie@gmail.com"},
]
keywords = ["academic", "paper", "research", "ai", "summarize", "pdf", "arxiv", "literature-review"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Processing",
    "Natural Language :: Chinese (Traditional)",
    "Natural Language :: English",
    "Natural Language :: Korean",
]
dependencies = [
    "pdfplumber>=0.10.0",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "google-generativeai>=0.5.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
web = ["gradio>=4.0.0"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
all = ["gradio>=4.0.0", "pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
paper-tool = "paper_tool:main"

[project.urls]
Homepage = "https://github.com/JudyaiLab/paper-research-tool"
Documentation = "https://github.com/JudyaiLab/paper-research-tool#readme"
Repository = "https://github.com/JudyaiLab/paper-research-tool"
Issues = "https://github.com/JudyaiLab/paper-research-tool/issues"

[tool.setuptools.packages.find]
include = ["core*", "prompts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
